Resolve horizontal scrollbars in single-pane diff problem.
Former-commit-id: 4778ee59f2cf4cb472f8c571ee1d0ec27b8c32b5

--- a/blocks/diff/_diff_singlepane.scss
+++ b/blocks/diff/_diff_singlepane.scss
@@ -25,11 +25,6 @@ $newline_fontcolor: #0b5d00;
   position: relative;
 }
 
-.diff__gutterwrap,
-.diff__codewrap {
-  float: left;
-}
-
 .diff__gutter,
 .diff__code {
   border: 0;
@@ -45,7 +40,14 @@ $newline_fontcolor: #0b5d00;
   padding: 0;
 }
 
+.diff__gutterwrap {
+  left: 0;
+  position: absolute;
+  top: 0;
+}
+
 .diff__gutter {
+  background: $gutter_background;
   color: $gutter_fontcolor;
   cursor: default;
   user-select: none;
@@ -53,7 +55,6 @@ $newline_fontcolor: #0b5d00;
 }
 
 .diff__gutterline td {
-  backgorund: $gutter_background;
   border-right: solid 1px $gutter_border;
   padding: 0 2px;
   width: 34px;
@@ -65,12 +66,12 @@ $newline_fontcolor: #0b5d00;
 }
 
 .diff__codewrap {
-  bottom: 0;
-  left: 100px;
   overflow: auto;
-  position: absolute;
-  right: 0;
-  top: 0;
+  width: 100%;
+}
+
+.diff__code {
+  margin-left: 100px;
 }
 
 .diff__codeline {
